# versefina

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DECISIONS.md  DESIGN.md  NOW.md  README.md  STATE.md  docker-compose.yml
apps/api/: pyproject.toml  requirements.txt
apps/api/app/: __init__.py  main.py
apps/api/src/: __init__.py  app.py  main.py
apps/api/src/infra/: http.py
apps/api/src/schemas/: adapter.py  agent.py  belief_graph.py  calibration.py  command.py  common.py  demo.py  demo_showcase.py  e2_005.py  e7_005.py  event.py  event_sandbox.py  event_simulation.py  influence_graph.py  mirror_agent.py  outcome_review.py  participant.py  participant_preparation.py  query.py  reliability.py  report.py  reporting.py  scenario.py  scenario_engine.py  simulation.py  simulation_ledger.py  statements.py  style.py  trade.py  (+3 more)
apps/api/tests/: __init__.py  test_agent.py  test_architecture.py  test_belief_graph.py  test_calibration.py  test_demo_runtime_showcase.py  test_demo_showcase.py  test_e2_005.py  test_e7_005.py  test_event_cards.py  test_event_casebook.py  test_event_ingestion.py  test_event_sandbox_api.py  test_event_simulation.py  test_event_structuring.py  test_finahunt_event_import_api.py  test_health.py  test_market_world.py  test_mirror_agent.py  test_outcome_review.py  test_participant.py  test_participant_preparation.py  test_reporting.py  test_scenario_engine.py  test_simulation.py  test_simulation_action_protocol.py  test_simulation_ledger.py  test_statement_upload.py  test_statements.py  test_style.py  test_style_embedding.py  test_workbench_api.py
(+609 files in other folders)
